[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/vocab_category_list.gd" type="Script" id=2]
[ext_resource path="res://tres/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://tres/gray_rect.tres" type="StyleBox" id=4]
[ext_resource path="res://tres/english_default_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/button.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/line_edit.gd" type="Script" id=7]
[ext_resource path="res://assets/trim.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/search_box.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.317647, 0.427451, 0.501961, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 60
use_filter = true
font_data = ExtResource( 8 )

[node name="Menu" instance=ExtResource( 1 )]
margin_right = 8.0
script = ExtResource( 2 )

[node name="MarginContainer" parent="." index="0"]
margin_right = 1088.0
custom_constants/margin_bottom = 800

[node name="VBoxContainer" parent="MarginContainer" index="0"]
margin_right = 988.0
margin_bottom = 1120.0

[node name="Label" parent="MarginContainer/VBoxContainer" index="0"]
margin_right = 888.0
text = "VOCABULARY LIST"
autowrap = true

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer" index="1"]
margin_right = 888.0
margin_bottom = 1020.0
custom_constants/separation = 100

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/VBoxContainer" index="0"]
margin_right = 888.0
margin_bottom = 180.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/PanelContainer" index="0"]
margin_right = 888.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer" index="0"]
margin_right = 888.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 5 )
text = "Search for term:"
align = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer" index="1"]
margin_top = 92.0
margin_right = 888.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
script = ExtResource( 7 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/LineEdit" index="2"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
text = "[enter search]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewTerms" parent="MarginContainer/VBoxContainer/VBoxContainer" index="1" instance=ExtResource( 6 )]
margin_top = 280.0
margin_right = 888.0
margin_bottom = 494.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "View all terms"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/VBoxContainer" index="2"]
margin_top = 594.0
margin_right = 888.0
margin_bottom = 808.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Search by category"
align = 1

[node name="SearchBox" parent="MarginContainer" index="1" instance=ExtResource( 9 )]
visible = false
margin_left = 100.0
margin_top = 100.0
margin_right = 988.0
margin_bottom = 1120.0
[connection signal="text_changed" from="MarginContainer/VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/ViewTerms" to="." method="_on_ViewTerms_pressed"]
